--- a/app/View_Profile.html
+++ b/app/View_Profile.html
@@ -1,4 +1,5 @@
-﻿<div>
+﻿<!--Code added by Frank Javier-->
+<div>
   <h1 class="text-center">Informacion basica:</h1>
   <table class="user-profile">
     <tr>
@@ -27,3 +28,4 @@
     </tr>
   </table>
 </div>
+<!--Code added by Frank Javier-->
