--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <!--<div ng-switch-when="false">-->
         <div ng-switch-when="true">
           <div ng-include="template.header"></div>
-          <div ng-include="template.body"></div>
+          <div ng-include="template.body"></div><!--Code added by Frank-->
           <div ng-include="template.sidebar"></div>
         </div>
         <div ng-switch-when="false">
