Quitar SPA view profile

--- a/app/View_Profile.html
+++ b/app/View_Profile.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td></td>
-        <td><input type="button" value="Close" ng-click="closeViewProfile()"/></td>
+        <!--td><input type="button" value="Close" ng-click="closeViewProfile()"/></td-->
     </tr>
   </table>
 </div>
