--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,12 @@
   <link rel='stylesheet' href='/resources/dist/css/skins/skin-blue.min.css' />
   <link rel='stylesheet' href='/resources/bootstrap/css/bootstrap.min.css' />
   <link rel='stylesheet' href='/resources/stylesheets/style.css' />
+  <link rel='stylesheet' type="text/css" href='/resources/plugins/codemirror/lib/codemirror.css'/>
+  <link rel="stylesheet" type="text/css" href="/resources/plugins/codemirror/theme/ambiance.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/plugins/codemirror/theme/solarized.css"/>
+  <link rel="stylesheet" type="text/css" href="http://codemirror.net/lib/codemirror.css"/>
+  <link rel="stylesheet" type="text/css" href="http://codemirror.net/theme/twilight.css"/>
+
   <script src="/resources/plugins/jQuery/jQuery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body class="skin-blue sidebar-mini" ng-app="cvApp" ng-controller="UserController" id="UserControllerId"> 
@@ -50,6 +56,36 @@
   <script src="/app.js"></script>
   <script src="/components/controllers/UserController.js"></script>
   <script src="/components/controllers/HomeController.js"></script>
+  <script src="/components/controllers/TemplateController.js"></script>
   <script src="/components/controllers/ModalInstanceCtrl.js"></script>
-  <script src="/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>  
+  <script src="/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="/resources/bower/angular-ui-codemirror/ui-codemirror.js" type="text/javascript" ></script>
+  <script src="/resources/bower/codemirror/lib/codemirror.js" type="text/javascript" ></script>
+  <script src="/resources/bower/ng-file-upload/ng-file-upload.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      //htmlCodeMirror = CodeMirror.fromTextArea(document.getElementById("html-text"));
+      //cssCodeMirror = CodeMirror.fromTextArea(document.getElementById("css-text"));
+
+      // //var cv = <%- JSON.stringify(cv) %>;
+      // iframeDoc = document.getElementById('preview-iframe').contentWindow.document;
+      // $('#edit-template-reload-btn').click();
+
+      // $('#edit-template-reload-btn').click(function() {
+      //   console.log('emtre');
+      //     var head = $('head', iframeDoc);
+      //     var bootstrapcss = "<link rel='stylesheet' href='/resources/bootstrap/css/bootstrap.min.css' />";
+      //     head.html(bootstrapcss + '<style>' + cssCodeMirror.getValue() + '</style>');
+
+
+      //     var body = $('body', iframeDoc);
+      //     var bootstrapjs = '<script src="/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></sc' + 'ript>';
+          //var html = new EJS({text: htmlCodeMirror.getValue()}).render(cv);
+          //body.html(html + bootstrapjs);
+
+      //});
+    });
+</script>
+
 </body>
